--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+alembic==1.6.5
 attrs==21.2.0
 click==8.0.1
 ecdsa==0.17.0
 Flask==2.0.1
 Flask-Cors==3.0.10
+Flask-Migrate==3.0.1
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 future==0.18.2
 greenlet==1.1.0
@@ -10,6 +13,7 @@ gunicorn==20.1.0
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+Mako==1.1.4
 MarkupSafe==2.0.1
 packaging==20.9
 pluggy==0.13.1
@@ -20,6 +24,8 @@ py==1.10.0
 pycryptodome==3.3.1
 pyparsing==2.4.7
 pytest==6.2.4
+python-dateutil==2.8.1
+python-editor==1.0.4
 python-jose-cryptodome==1.3.2
 six==1.16.0
 SQLAlchemy==1.4.17
